<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_blue_6"
    tools:context=".PersonalStatsActivity">

    <TextView
        android:id="@+id/playerNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Γιάννης Κωνσταντέλιας" />

    <ImageView
        android:id="@+id/playerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerNameTxt" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/playerHeader"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/goalTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goals" />

            <TextView
                android:id="@+id/assistTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assists" />

            <TextView
                android:id="@+id/shotsOnTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shots_on_target" />

            <TextView
                android:id="@+id/shotsOffTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shots_off_target" />

            <TextView
                android:id="@+id/passesSuccTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passes_succ" />

            <TextView
                android:id="@+id/passesFailTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passes_fail" />

            <TextView
                android:id="@+id/tacklesSuccTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tackles_succ" />

            <TextView
                android:id="@+id/tacklesFailTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tackles_fail" />

            <TextView
                android:id="@+id/crossesSuccTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crosses_succ" />

            <TextView
                android:id="@+id/crossesFailTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crosses_fail" />

            <TextView
                android:id="@+id/errorsTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errors" />

            <TextView
                android:id="@+id/foulsWonTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fouls_won" />

            <TextView
                android:id="@+id/foulsCommittedTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fouls_committed" />

            <TextView
                android:id="@+id/yellowCardsTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellow_cards" />

            <TextView
                android:id="@+id/redCardsTxt"
                style="@style/PersonalStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_cards" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>