<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_blue_6"
    tools:context=".StatsAnalystConfirmationActivity">

    <EditText
        android:id="@+id/passowrdTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmText"
        android:textColor="@color/palette_blue_2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passowrdTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/palette_blue_1"
        android:onClick="backFeature"
        android:text="@string/backButton"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/palette_blue_1"
        android:ems="10"
        android:onClick="validatePassword"
        android:text="@string/enterButton"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passowrdTxt" />

    <TextView
        android:id="@+id/wrongPasswordTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wrongPasswordTxt"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>