<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/palette_blue_6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="145dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="120dp"
            android:src="@drawable/superleaguelogo" />

        <LinearLayout
            android:id="@+id/analystSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnStandings"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/menu_standings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/palette_blue_3"
            app:cornerRadius="12dp"
            android:layout_marginBottom="16dp"
            android:onClick="standingsEnter"/>

        <Button
            android:id="@+id/btnMatches"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/menu_matches"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/palette_blue_3"
            app:cornerRadius="12dp"
            android:layout_marginBottom="16dp"
            android:onClick="matchesEnter"/>

        <Button
            android:id="@+id/btnPlayerStats"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/palette_blue_3"
            android:onClick="playerStatsEnter"
            android:text="@string/topStats"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="12dp" />

    </LinearLayout>
</ScrollView>